--- a/styles/style.css
+++ b/styles/style.css
@@ -5,3 +5,66 @@
     padding: 0;
     font-family: "Work Sans", serif;
 }
+
+/* shared styles */
+.display-flex {
+    display: flex;
+}
+
+/* dark 01 */
+.dark1 {
+    color: #131313;
+}
+
+/* dark 02 */
+.dark2 {
+    color: #424242;
+}
+
+/* dark 03 */
+.dark3 {
+    color: #727272;
+}
+
+.bg-primary {
+    background-color: rgba(255, 144, 14, 0.1);
+}
+
+/* header styles */
+
+/* navbar related styles */
+.nav-bar {
+    justify-content: space-between;
+    align-items: center;
+    padding-top: 3rem;
+}
+
+.logo {
+    font-weight: 700;
+    font-size: 2.8rem;
+}
+
+.nav-links {
+    gap: 30px;
+}
+
+.nav-item {
+    list-style: none;
+    font-weight: 500;
+}
+
+.nav-link {
+    text-decoration: none;
+}
+
+.nav-bar,
+.banner {
+    max-width: 1440px;
+    margin: 0 auto;
+}
+.banner-content{
+    max-width: 860px;
+    margin: 0 auto;
+    text-align: center;
+    padding-top: 6rem;
+}
