--- a/styles/style.css
+++ b/styles/style.css
@@ -11,6 +11,17 @@
     display: flex;
 }
 
+.btn-primary {
+    background-color: #FF900E;
+    color: #FFFFFF;
+    border: none;
+    padding: 1.25rem 1.5rem;
+    border-radius: 8px;
+    margin: 1.8rem auto;
+    font-weight: 600;
+    font-size: 1.25rem;
+}
+
 /* dark 01 */
 .dark1 {
     color: #131313;
@@ -45,7 +56,7 @@
 }
 
 .nav-links {
-    gap: 30px;
+    gap: 1.8rem;
 }
 
 .nav-item {
@@ -62,9 +73,34 @@
     max-width: 1440px;
     margin: 0 auto;
 }
-.banner-content{
-    max-width: 860px;
+
+.banner-content {
+    max-width: 850px;
     margin: 0 auto;
     text-align: center;
     padding-top: 6rem;
+}
+
+.banner-title {
+    font-weight: 700;
+    font-size: 4rem;
+}
+
+.banner-desc {
+    font-size: 1rem;
+    margin-top: 2.8rem;
+    line-height: 1.625rem;
+}
+
+.banner-img {
+    width: 100%;
+}
+
+/* Responsive Media Query */
+@media screen and (max-width: 576px) {
+    .nav-bar, .nav-links{
+        flex-direction: column;
+        align-items: center;
+        gap: 1.8rem;
+    }
 }
