--- a/styles/style.css
+++ b/styles/style.css
@@ -138,22 +138,38 @@ main {
 }
 
 /* our features */
-.features-sec{
+.features-sec {
     gap: 140px;
 }
+
 #feat-title {
     border-left: 5px solid #FF900E;
     padding-left: 20px;
 }
-.feature-card{
+
+.feature-card {
     padding: 30px;
     margin: 30px auto;
     box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.25);
     border-radius: 8px;
 }
-.feature-title{
+
+.feature-title {
     font-weight: 600;
     font-size: 1.25rem;
+}
+
+#badge {
+    padding: 45px;
+    font-size: 1.5rem;
+    font-weight: 500;
+    margin-left: -100px;
+    margin-top: -100px;
+}
+
+#jumbo-text {
+    font-weight: 700;
+    font-size: 4rem;
 }
 
 /* some facts */
@@ -203,13 +219,16 @@ main {
     filter: grayscale(100%);
 }
 
-footer {
-    margin: 0 auto;
+/* footer section */
+
+.foot-sec {
+    text-align: center;
 }
 
 .footer-s {
-    max-width: 620px;
-
+    margin: 30px auto;
+    padding-top: 50px;
+    padding-bottom: 50px;
 }
 
 /* Responsive Media Query small device */
@@ -217,10 +236,16 @@ footer {
 
     .nav-bar,
     .nav-links,
-    .teams {
+    .teams,
+    .features-sec {
         flex-direction: column;
         align-items: center;
         gap: 1.8rem;
+    }
+
+    .feature-content,
+    .team-img {
+        margin: 30px;
     }
 
     .team-img,
@@ -238,7 +263,8 @@ footer {
         margin-bottom: 0;
     }
 
-    .team-img>img {
+    .team-img>img,
+    .ftr-img>img {
         width: 100%;
     }
 
@@ -256,12 +282,36 @@ footer {
     .sponsor-companies>img {
         width: 20%;
     }
+
+    .ftr-img {
+        text-align: center;
+    }
+
+    #badge {
+        margin: 0 20px auto;
+    }
+
+    footer {
+        margin: 0;
+        width: auto;
+    }
 }
 
 /* Medium Device */
 @media screen and (min-width: 577px) and (max-width: 992px) {
-    .teams {
+
+    .teams,
+    .features-sec {
         flex-direction: column;
+    }
+
+    .features-sec {
+        gap: 30px;
+    }
+
+    .feature-content,
+    .nav-bar {
+        margin: 50px;
     }
 
     .facts-container {
@@ -284,4 +334,9 @@ footer {
         flex-wrap: wrap;
         gap: 35px;
     }
+
+    .ftr-img {
+        text-align: center;
+    }
+
 }
